--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: ZingLix Blog
 SEOTitle: ZingLix Blog
 header-img: img/home-bg.jpg
 email: huxpro@gmail.com
-description: "Be Better."
+description: "A student majors in computer scicence."
 keyword: "ZingLix"
 url: "http://zinglix.xyz"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
