--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ baseurl: ""                             # for example, '/blog' if your blog host
 # SNS settings
 RSS: false
 weibo_username:     ZingLix
+github_username:     ZingLix
 #zhihu_username:     huxpro
 #github_username:    huxpro
 #twitter_username:  huxpro
