--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ baseurl: ""                             # for example, '/blog' if your blog host
 
 # SNS settings
 RSS: false
-weibo_username:     ZingLix
+weibo_username:     2816853323
 github_username:     ZingLix
 #zhihu_username:     huxpro
 #github_username:    huxpro
