--- a/_config.yml
+++ b/_config.yml
@@ -64,8 +64,8 @@ duoshuo_share: true                     # set to false if you want to use Commen
 # ba_track_id: [your track id]
 
 # Google Analytics
-#ga_track_id: 'UA-49627206-1'            # Format: UA-xxxxxx-xx
-#ga_domain: zinglix.xyz
+ga_track_id: 'UA-88177731-1'            # Format: UA-xxxxxx-xx
+ga_domain: zinglix.xyz
 
 
 
