--- a/_config.yml
+++ b/_config.yml
@@ -54,14 +54,14 @@ kramdown:
 # Duoshuo settings
 duoshuo_username: zinglix
 # Share component is depend on Comment so we can NOT use share only.
-duoshuo_share: true                     # set to false if you want to use Comment without Sharing
+duoshuo_share: false                     # set to false if you want to use Comment without Sharing
 
 
 
 
 # Analytics settings
 # Baidu Analytics 
-# ba_track_id: [your track id]
+ ba_track_id: 56db96a233c8fecf5264edbd450e131a
 
 # Google Analytics
 ga_track_id: 'UA-88177731-1'            # Format: UA-xxxxxx-xx
