--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: ZingLix Blog
 SEOTitle: ZingLix Blog
 header-img: img/home-bg.jpg
-email: huxpro@gmail.com
+email: zinglix@126.com
 description: "A student majors in computer scicence."
 keyword: "ZingLix"
 url: "http://zinglix.xyz"              # your host, for absolute URL
