--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: ZingLix Blog
 SEOTitle: ZingLix Blog
 header-img: img/home-bg.jpg
 email: zinglix@126.com
-description: "A student majors in computer scicence."
-keyword: "ZingLix"
+#description: "A "
+#keyword: "ZingLix"
 url: "http://zinglix.xyz"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 
