--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: ZingLix Blog
 SEOTitle: ZingLix Blog
 header-img: img/home-bg.jpg
-email: zinglix@126.com
+email: zinglix.liu@gmail.com
 #description: "A "
 #keyword: "ZingLix"
 url: "http://zinglix.xyz"              # your host, for absolute URL
