--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ github_username:     ZingLix
 highlighter: rouge
 permalink: pretty
 paginate: 10
-exclude: ["less","node_modules","Gruntfile.js","package.json","README.md","README.zh.md"]
+exclude: ["less","node_modules","Gruntfile.js","package.json","README.md","README.zh.md","LICENSE"]
 anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
 
 
