stop sw temporarily

--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ featured-condition-size: 1             # A tag will be featured if the size of i
 
 # Progressive Web Apps
 chrome-tab-theme-color: "#000000"
-service-worker: true
+service-worker: false
 
 
 
