--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,12 @@ plugins: [jekyll-paginate]
 markdown: kramdown
 kramdown:
   input: GFM                            # use Github Flavored Markdown !important
-
+  syntax_highlighter_opts:
+    span:
+      line_numbers: false
+    block:
+      line_numbers: true
+      start_line: 1
 
 
 # Gitment settings
@@ -74,7 +79,8 @@ featured-condition-size: 1             # A tag will be featured if the size of i
 chrome-tab-theme-color: "#000000"
 service-worker: false
 
-
+# MathJax rendering for layout:page (e.g. post preview)
+page-mathjax: true
 
 # Friends
 
