--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ header-img: img/home-bg.jpg
 email: zinglix.liu@gmail.com
 #description: "A "
 #keyword: "ZingLix"
-url: "http://zinglix.xyz"              # your host, for absolute URL
+url: "https://zinglix.xyz"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 
 
