--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ kramdown:
       line_numbers: true
       start_line: 1
 
-# Gitment settings
+# Gitalk settings
 Client_ID: e142464e8cd0a33bb821
 Client_Secret: ca41bf15c586cbba02128f2ef1b9840af3d9ea67
 
