add github actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
           sudo apt install ruby-full build-essential zlib1g-dev
           sudo gem install jekyll bundler
           sudo bundle install
-          jekyll build --trace
+          bundle exec jekyll build --trace
           ls
           
 
