--- a/_config.yml
+++ b/_config.yml
@@ -10,9 +10,9 @@ baseurl: "" # for example, '/blog' if your blog hosted on 'host/blog'
 
 # SNS settings
 RSS: false
-weibo_username: 2816853323
+#weibo_username: 2816853323
 github_username: ZingLix
-#zhihu_username:     huxpro
+zhihu_username:  ZingLix
 #github_username:    huxpro
 #twitter_username:  huxpro
 #facebook_username:  huxpro
