update sidebar description

--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ ga_domain: zinglix.xyz
 
 # Sidebar settings
 sidebar: true # whether or not using Sidebar.
-sidebar-about-description: "Stay curious and keep learning.<br/>Exploring the unknown with you."
+sidebar-about-description: "Never grown up, but never stop growing."
 sidebar-avatar: /img/avatar.png # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # Featured Tags
