--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ kramdown:
 
 # Analytics settings
 # Google Analytics
-gtag_id: G-D4V3NFFMB0
+gtag_id: 
 ga_track_id: "UA-88177731-1" # Format: UA-xxxxxx-xx
 ga_domain: zinglix.xyz
 google_adsense_id: ca-pub-5810024348822097
