--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url: "https://zinglix.xyz" # your host, for absolute URL
 baseurl: "" # for example, '/blog' if your blog hosted on 'host/blog'
 
 # SNS settings
-RSS: false
+RSS: true
 #weibo_username: 2816853323
 github_username: ZingLix
 zhihu_username:  ZingLix
