--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,3 +27,13 @@ jobs:
           envId: ${{ secrets.ENV_ID }}	
           # Github 项目静态文件的路径	
           staticSrcPath: _site 
+      - name: Tencent Cloud COS Action
+        uses: TencentCloud/cos-action@v1
+        with:
+          secret_id: ${{ secrets.SECRET_ID }}
+          secret_key: ${{ secrets.SECRET_KEY }}
+          cos_bucket: ${{ secrets.COS_BUCKET }}
+          cos_region: ${{ secrets.COS_REGION }}
+          local_path: _site
+          remote_path: /
+          clean: true
