--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,18 +15,18 @@ jobs:
           bundle exec jekyll build --trace	
           ls	
           	
-      # 使用云开发 Github Action 部署	
-      - name: Deploy static to Tencent CloudBase	
-        id: deployStatic	
-        uses: TencentCloudBase/cloudbase-action@v1.1.1
-        with:	
-         # 云开发的访问密钥 secretId 和 secretKey	
-          secretId: ${{ secrets.SECRET_ID }}	
-          secretKey: ${{ secrets.SECRET_KEY }}	
-          # 云开发的环境id	
-          envId: ${{ secrets.ENV_ID }}	
-          # Github 项目静态文件的路径	
-          staticSrcPath: _site 
+#       # 使用云开发 Github Action 部署	
+#       - name: Deploy static to Tencent CloudBase	
+#         id: deployStatic	
+#         uses: TencentCloudBase/cloudbase-action@v1.1.1
+#         with:	
+#          # 云开发的访问密钥 secretId 和 secretKey	
+#           secretId: ${{ secrets.SECRET_ID }}	
+#           secretKey: ${{ secrets.SECRET_KEY }}	
+#           # 云开发的环境id	
+#           envId: ${{ secrets.ENV_ID }}	
+#           # Github 项目静态文件的路径	
+#           staticSrcPath: _site 
       - name: Tencent Cloud COS Action
         uses: TencentCloud/cos-action@v1
         with:
