--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,7 @@ exclude:
     "README.zh.md",
     "LICENSE",
   ]
+include: ["_headers"]
 anchorjs: true # if you want to customize anchor. check out line:181 of `post.html`
 logo: icon.png
 lang: zh_CN
