--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,4 +40,4 @@ jobs:
           local_path: _site
           remote_path: /
           clean: true
-          accelerate: true
+ #         accelerate: true
