--- a/_config.yml
+++ b/_config.yml
@@ -60,8 +60,8 @@ kramdown:
 # Analytics settings
 # Google Analytics
 gtag_id: G-D4V3NFFMB0
-ga_track_id: "UA-88177731-1" # Format: UA-xxxxxx-xx
-ga_domain: zinglix.xyz
+ga_track_id:  # Format: UA-xxxxxx-xx
+ga_domain: 
 google_adsense_id:
 
 # Sidebar settings
