update travelling url

--- a/_config.yml
+++ b/_config.yml
@@ -90,7 +90,7 @@ friends:
     { title: "十年之约", href: "https://www.foreverblog.cn/" },
     {
       title: '<i class="fa fa-subway"></i> 开往',
-      href: "https://travellings.link/",
+      href: "https://www.travellings.cn/go.html",
     },
   ]
 
